# QNX_Startup

./: README.md
IPCReceive/: Makefile  qnx-aarch64-toolchain.cmake
IPCReceive/src/: CMakeLists.txt  IPCRecv_Study.cpp
IPCSend/src/: CMakeLists.txt  IPCSend_Study.c
ResourseManager/: CMakeLists.txt
ResourseManager/config/: SLM_ZStudy.xml
ResourseManager/src/: CMakeLists.txt  RM_Study.c
doc/: 01_Process&Thread.md  02_IPC.md  04_Interrupt.md
